# prospectio-chatbot

./: .env.example  .gitignore  .trivyignore  Dockerfile  pyproject.toml  sonar-project.properties  trivy.yaml
.github/workflows/: cd.yaml  ci.yaml
prospectio_chatbot/: cl_app.py  config.py
prospectio_chatbot/core/: essentials.py
prospectio_chatbot/graphs/: graph_params.py
prospectio_chatbot/graphs/prospectio/: nodes.py
tests/: conftest.py
tests/fixtures/: external.py
tests/unit/: test_auth_router.py  test_auth_utils.py  test_chat_profiles.py  test_chat_settings.py  test_client_factory.py  test_config.py  test_core_essentials.py  test_generate_chain.py  test_generic_client.py  test_graph_factory.py  test_graph_params.py  test_nodes.py  test_prompt_loader.py  test_prospectio_graph.py
