[tool.poetry]
name = "prospectio_chatbot"
version = "0.1.0"
description = "Chatbot for Prospectio api and front using Chainlit"
authors = ["Kaiohz <yohan.goncalves.pro@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.12.7,<3.14"
chainlit = "2.7.2"
pydantic = "2.10.1"
numpy = "2.1.0"
ollama = "0.5.1"
torch = "2.8.0"
psycopg = "3.2.4"
psycopg-binary = "3.2.4"
langgraph = "0.3.11"
langchain-ollama = "0.3.5"
langchain-community = "0.3.27"
langchain-mistralai = "0.2.11"
httpx = {extras = ["http2"], version = "0.28.1"}
langchain-google-genai = "2.1.8"
langchain-openai = "0.3.32"
langchain-mcp-adapters = "0.1.9"
greenlet = "3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
poetry-dotenv-plugin = "0.2.0"
python-dotenv = "1.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
pythonpath = ["prospectio_chatbot"]
addopts = ["-v", "--tb=short"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
