[tool.poetry]
name = "prospectio_chatbot"
version = "0.1.0"
description = "Chatbot for Prospectio api and front using Chainlit"
authors = ["Kaiohz <yohan.goncalves.pro@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.12.7,<3.14"
chainlit = "2.9.3"
pydantic = "2.10.1"
numpy = "2.1.0"
ollama = "0.6.1"
torch = "2.8.0"
psycopg = "3.2.4"
psycopg-binary = "3.2.4"
langchain = "1.0.0"
langgraph = "1.0.4"
langchain-ollama = "1.0.0"
langchain-community = "0.4.1"
langchain-mistralai = "1.1.0"
httpx = {extras = ["http2"], version = "0.28.1"}
langchain-google-genai = "4.0.0"
langchain-openai = "1.1.2"
langchain-mcp-adapters = "0.2.1"
greenlet = "3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
poetry-dotenv-plugin = "0.2.0"
python-dotenv = "1.0.1"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
pythonpath = ["prospectio_chatbot"]
addopts = ["-v", "--tb=short"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
